fix: 💄 icon button not vertical aligned

--- a/src/components/Shared/Buttons/IconButton/IconButton.module.css
+++ b/src/components/Shared/Buttons/IconButton/IconButton.module.css
@@ -3,7 +3,7 @@
   --icon-button-padding: 0.2em;
   --icon-button-opacity: var(--opacity-80);
 
-  display: inline-flex;
+  display: flex;
   align-items: center;
   align-self: center;
   justify-content: center;
